updates to working with me

--- a/working-with-me.html
+++ b/working-with-me.html
@@ -87,7 +87,13 @@
       <!--emo-->
       <h5 class="mt-4" style="color: white;"><i>Interpersonal stuff</i></h5>
       <li>
+        If we are working togther, then we are both trying to uncover the underlying truth for us to move ahead. That means critiquing things for what they are. Good idea or bad idea, the idea is to not take it personally and to decouple it from our identity. 
+        <br>
+        "Strong opinions, loosely held" - is a phrase that captures this.
+      </li> 
+      <li>
         I would appreciate transparency and honest communication always. I will always try to be accepting and non-defensive towards any conversation.
+
       </li> 
       <li>
         My preference is to not be in a place where I have to guess what is on the other person's mind.</li>
@@ -98,15 +104,17 @@
         <li>I am at a stage of my life where I cannot hold unresolved threads of relationships with people. We might choose to agree to disagree we might choose to not interact with each other but that is a better place to be than to leave things open ended and hanging because that causes anxiety and unnecessary amount of mindspace to be taken up.</li>
         <h5 style="color: white;"><i>Others</i></h5>
       <li>
-        I, in perpetuity, sincerely apologize if any of my actions, feelings, thoughts, cause hurt or is felt as condescension or making you feel lesser. I generally mean no harm.
-      </li>
-      <li>
         I tend to philosophize, spiritualize almost everything that I work on. I know no other framework through which I can operate as well as these. And it is not a prerequisite or necessity that you have to engage with me on either of these two levels. 
       </li>
-      <li>I try to approach everything from a place of love and compassion. <br> ~ Shiv.</li>
+      <li>I try to approach everything from a place of love and compassion.
+        <li>
+          I, in perpetuity, apologize if any of my actions, feelings, thoughts, cause hurt or is felt as condescension or making you feel lesser. I generally mean no harm and am always looking to improve. Do let me know about it.
+        </li>
+        <li> ~ Shiv.</li>
       <!--<h4 style="color: white;"><i>Longer version</i></h4>
     <ul>
       <li>So we might have been friends or acquaintances or strangers and we have for some shape or form started to work together.</li>
+
     
        <li>What I mean by work together is anything that is just not casual hanging out. So work together your includes ideas, feedback, working on projects together startup ideas together, working on music DJ sets together, could even sometimes be working on personal issues and life stuff and all of that.</li> 
       <li>
