Enhance closing paragraph in working-with-me page

--- a/working-with-me.html
+++ b/working-with-me.html
@@ -110,7 +110,9 @@
         <li>
           I, in perpetuity, apologize if any of my actions, feelings, thoughts, cause hurt or is felt as condescension or making you feel lesser. I generally mean no harm and am always looking to improve. Do let me know about it.
         </li>
-        <li> ~ Shiv.</li>
+        <li> Thank you for reading and I hope we have an interesting time working together. 
+          <br>
+          ~ Shiv.</li>
       <!--<h4 style="color: white;"><i>Longer version</i></h4>
     <ul>
       <li>So we might have been friends or acquaintances or strangers and we have for some shape or form started to work together.</li>
