Added my sets properly with filter. moved 10ragas to another page.

--- a/index.html
+++ b/index.html
@@ -78,10 +78,13 @@
                 <h1 class="text-2xl font-extrabold text-white mb-4">Me?</h1>
                 <div class="text-lg text-grey leading-normal spaced-y-6">
                     <p>
-                        Currently: Product Freelance & Music
+                        Currently:  Music & Freelance Product Consultant
                     </p>
                     <p>
-                        I do product consulting, play indian classical fusion music and a bunch of other things.
+                        I play indian classical electronic music and host my own event called <a href="https://instagram.com/alt.spaces._" target="_blank">AltSpaces</a>.
+                    </p>
+                    <p>
+                        I also do product consulting and work with startups to help them with various aspects product management.
                     </p>
                     <p>
                         I am passionately curious - I love to learn and to exercise my emotional and thinking self.
