--- a/index.html
+++ b/index.html
@@ -106,33 +106,12 @@
             <div class="text-lg text-grey leading-normal spaced-y-6 markdown">
                 <a id="contact">
                     <p>
-                        Contact me:<br> Twitter: <a href="https://twitter.com/ShivhariShankar" target="_blank">@shivharishankar</a><br> Email: &lt;myfirstname&gt; . &lt;mylastname&gt; @gmail.com <br>LinkedIn: <a href="https://www.linkedin.com/in/shivhari-shankar/">Shivhari Shankar</a>
+                        Contact me:<br> Twitter: <a href="https://twitter.com/ShivhariShankar" target="_blank">@shivharishankar</a><br> Email: &lt;myfirstname&gt; . &lt;mylastname&gt; @gmail.com <br><a href="https://instagram.com/shivharishankar/">Instagram</a><br><a href="https://soundcloud.com/shivhari">Soundcloud</a><br>LinkedIn: <a href="https://www.linkedin.com/in/shivhari-shankar/">Shivhari Shankar</a>
                     </p>
                 </a>
                 <br>
             </div>
         </div>
-
-        <script src="https://cdn.jsdelivr.net/npm/vue@2.5.21/dist/vue.min.js"></script>
-        <script>
-            new Vue({
-                el: '#app',
-                data: {
-                    menuOpen: false
-                },
-                methods: {
-                    toggleMenu: function() {
-                        if (this.menuOpen) {
-                            this.menuOpen = false
-                            document.body.classList.remove('scrolling-auto', 'overflow-hidden', 'fixed', 'pin-x')
-                        } else {
-                            this.menuOpen = true
-                            document.body.classList.add('scrolling-auto', 'overflow-hidden', 'fixed', 'pin-x')
-                        }
-                    }
-                }
-            })
-        </script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/highlight.min.js"></script>
         <script>
             hljs.initHighlightingOnLoad();
