Refine descriptions of Indian Classical Electronic Music for clarity and impact in the music section.

--- a/music/index.html
+++ b/music/index.html
@@ -58,8 +58,8 @@
         </div>
         <div class="lg:pl-32 mt-12">
             <div class="max-w-md">
-                <h2 class="text-lg text-white leading-tight mt-1 mb-6">I only play Indian Classical Electronic Music. </h2>
-                <h2 class="text-lg text-white leading-tight mt-1 mb-6">This genre of music can be non-cheesy, underground, heavy and soulful even if it has Indian Classical Elements throughout the set.</h2>
+                <h2 class="text-lg text-white leading-tight mt-1 mb-6">I exclusively play Indian Classical Electronic Music. </h2>
+                <h2 class="text-lg text-white leading-tight mt-1 mb-6"> This genre blends the depth of Indian classical elements with the raw energy of underground electronic music in a way that is soulful, intense, and free from monotony.</h2>
                 <h1 class="text-2xl font-extrabold text-white leading-tight mt-1 mb-6 underline">Sets</h1>
                 
                 <div id="genreFilters" class="mb-8 flex flex-wrap gap-2">
