added extended altspaces set

--- a/music/index.html
+++ b/music/index.html
@@ -75,10 +75,16 @@
     <script>
         const setsData = {
             sets: [
-                {
+            {
+                    name: "Extended 4 hour Indian Electronica Set - AltSpaces June 2025",
+                    url: "https://youtu.be/ukqHnmlmTGQ",
+                    genres: ["Downtempo","Breaks", "House", "DnB", "Asian Underground", "Hybrid"] ,
+                    image: "../img/sets-images/extended-min.png",
+                    order: 1
+                },    
+            {
                     name: " Shivhari @BeatsnBanter (Ext.Hyd)",
                     url: "https://www.youtube.com/watch?v=pXzQds9-n98",
-                    embedUrl: "https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1900859334&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true",
                     genres: ["Breaks", "House"],
                     image: "../img/sets-images/bnb.jpg",
                     order: 1
@@ -86,7 +92,6 @@
                 {
                     name: "Asian Underground Breakbeat - For Obscura @ Indiranagar Social",
                     url: "https://soundcloud.com/shivhari/asian-underground-breakbeat-for-obscura-indiranagar-social-06072024",
-                    embedUrl: "https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1900859334&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true",
                     genres: ["Breaks"],
                     image: "../img/sets-images/obscura.jpg",
                     order: 4
