--- a/music/index.html
+++ b/music/index.html
@@ -58,8 +58,10 @@
         </div>
         <div class="lg:pl-32 mt-12">
             <div class="max-w-md">
+                
                 <h2 class="text-lg text-white leading-tight mt-1 mb-6">I exclusively play Indian Classical Electronic Music. </h2>
                 <h2 class="text-lg text-white leading-tight mt-1 mb-6"> This genre blends the depth of Indian classical elements with the raw energy of underground electronic music in a way that is soulful, intense, and free from monotony.</h2>
+                <div class="mb-6"><a href="music/testimonials.html" class=" bold underline cursor-pointer text-lg text-white leading-tight mt-1 italic">Testimonials about my music</a></div>
                 <h1 class="text-2xl font-extrabold text-white leading-tight mt-1 mb-6 underline">Sets</h1>
                 
                 <div id="genreFilters" class="mb-8 flex flex-wrap gap-2">
@@ -75,6 +77,13 @@
     <script>
         const setsData = {
             sets: [
+            {
+                    name: "Indian Classical Goes Electronic - Retro Raga [For Scoopwhoop]",
+                    url: "https://www.youtube.com/watch?v=EATyEgWRMFM",
+                    genres: ["House", "Techno"] ,
+                    image: "../img/sets-images/retro-raga.jpg",
+                    order: 1
+                },    
             {
                     name: "Extended 4 hour Indian Electronica Set - AltSpaces June 2025",
                     url: "https://youtu.be/ukqHnmlmTGQ",
